c/examples/writing-a-c-compiler-tests/tests/chapter_13/valid/extra_credit/compound_assign.c
/* Test compound assignment with doubles */
int main(void) {
    double d = 10.0;
    d /= 4.0;
    if (d != 2.5) {
        return 1;
    }
    d *= 10000.0;
    if (d != 25000.0) {
        return 2;
    }
    return 0;
}