c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/compound_left_bitshift.c
int main(void) {
    // Can't perform compound bitwise operations with doubles
    double d = 1.0;
    d <<= 1;
    return d;
}